--- a/src/devTools/editor/tabs/dataPanelTabs.module.scss
+++ b/src/devTools/editor/tabs/dataPanelTabs.module.scss
@@ -36,7 +36,8 @@
 }
 
 .selectablePreviewContainer {
-  padding: 4px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .tabPane {
